--- a/group project report_V1.ipynb
+++ b/group project report_V1.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "Diabetes is a common chronic health condition characterized by abnormally high blood glucose levels caused by decreased capacity of producing insulin or cells becoming resistant to insulin. Approximately, 1.4 million people around the world are diagnosed as diabetic each year. Type 1 diabetes is a genetic condition that often shows up early in life, however type 2 diabetes is different as it is mainly lifestyle-related and develops over time. Pre-diabetes is also prevalent as people are usually unaware of the condition since they produce no symptoms and will gradually lead to fully-fledged diabetes. As a result, it's critical to identify type 2 diabetes at an early stage in order to stop the condition from progressing and possibly getting worse. We intend to create a predictive model that can accurately predict whether a person is diabetic, pre-diabetic, or non-diabetic based on their medical information to help people assess their risk for developing type 2 diabetes.\n",
     "\n",
-    "We'll make use of a data set utilized in a previous study by Rajput et al., who retrieved the data set from the Mendeley diabetes types data set. The data in the data set was collected from the Iraqi society, as it was acquired from the laboratory of Medical City Hospital and the Specialized Center for Endocrinology and Diabetes-Al-Kindy Teaching Hospital. The data was extracted from patients' file and compiled into a database. The data consists of medical information and laboratory analysis of 1000 patients: 103 non-diabetic patients, 53 pre-diabetic patients, and 844 diabetic patients. The data contains different diabetes attributes such as Gender, Age, Urea level (Urea), Creatinine ratio (Cr), Blood Sugar Level (HbA1c), Cholesterol level (Chol), Triglycerides (TG), High-density lipoprotein (HDL), Low-density lipoprotein (LDL), Very-low-density lipoprotein (VLDL), and the patients' diagnosis (CLASS) of either diabetic, pre-diabetic, non-diabetic.\n",
+    "We'll make use of a data set utilized in a previous study by Rajput et al., from the Iraqi society, as it was acquired from the laboratory of Medical City Hospital and the Specialized Center for Endocrinology and Diabetes-Al-Kindy Teaching Hospital. The data was extracted from patients' file and compiled into a database. The data consists of medical information and laboratory analysis of 1000 patients: 103 non-diabetic patients, 53 pre-diabetic patients, and 844 diabetic patients. The data contains different diabetes attributes such as Gender, Age, Urea level (Urea), Creatinine ratio (Cr), Blood Sugar Level (HbA1c), Cholesterol level (Chol), Triglycerides (TG), High-density lipoprotein (HDL), Low-density lipoprotein (LDL), Very-low-density lipoprotein (VLDL), and the patients' diagnosis (CLASS) of either diabetic, pre-diabetic, non-diabetic.\n",
     "\n",
     "The question we are trying to answer is whether we can use previously diagnosed patients' medical attributes related to diabetes to predict whether a future patient with an unknown diagnosis falls into one of the three diabetes categories: 1. Diabetic, 2. Pre-diabetic, or 3. Non-diabetic.\n",
     "\n",
@@ -165,7 +165,7 @@
    "id": "4bf84caf",
    "metadata": {},
    "source": [
-    "We chose a dataset that was utilized in a previous scientific study about predictors of diabetes done by Rajput et. al in 2022. We downloaded the dataset as a .csv file from Mendeley which contains data about previous by Rajput et. al. to our remote repository on GitHub. We then loaded the dataset from GitHub to our Jupyter notebook. The CLASS column contains the diagnoses of whether a patient is diabetic (Y), pre-diabetic (P), or non-diabetic (N). Since we will be working with the CLASS column as a categorical statistical variable, we used the as_factor function to mutate the CLASS column from a character variable to a factor variable."
+    "We downloaded the dataset as a .csv file from Mendeley to our remote repository on GitHub. We then loaded the dataset from GitHub to our Jupyter notebook. The CLASS column contains the diagnoses of whether a patient is diabetic (Y), pre-diabetic (P), or non-diabetic (N). We used the as_factor function to mutate the CLASS column from a character variable to a factor variable."
    ]
   },
   {
@@ -319,7 +319,7 @@
    "id": "a61fedaf",
    "metadata": {},
    "source": [
-    "We decided to compute the mean values for each of the numerical predictors in our data set, excluding the Gender column since we cannot use a non-numerical variable as a predictor variable for classification. We used the summarize function paired with the across function to specify the columns that we want to perform the statistical summary on (AGE:BMI) and then used the mean function to calculate the mean values for each of the columns specified. We noted that the average age of the sample is at 53.5, the mean BMI value is 29.58 and the average HbA1c value is 8.28, and by comparing variable values to the normal range, we concluded that the sample is overweight and diabetic on average. (see normal values from literatures in Introduction section)"
+    "We decided to compute the mean values for each of the numerical predictors in our data set, excluding the Gender column since we cannot use a non-numerical variable as a predictor variable for classification. We used the summarize function paired with the across function to specify the columns that we want to perform the statistical summary on (AGE:BMI) and then used the mean function to calculate the mean values for each of the columns specified. "
    ]
   },
   {
@@ -590,7 +590,7 @@
    "source": [
     "Based on the plots we generated in our exploratory data analysis, we decided to use the BMI and HbA1c variables as our predictor variables for our classifier model since the distribution plot between these two variables shows observations from each class being located in separate areas from one another which is promising for a K-nearest neighbors classification model. In particular, non-diabetic observations tend to have lower BMI and HbA1c values while diabetic observations tend to have larger values. Pre-diabetic observations tend to have a HbA1c value in between diabetic and non-diabetic observations, but this is not necessarily true for their BMI value. The plot shows us that pre-diabetic observations have relatively the same range of BMI values as non-diabetic observations, but they tend to have higher HbA1c values. There are also several diabetic observations that are in the same range of BMI values as non-diabetic observations, but the diabetic observations have considerably higher Hb1Ac values. As a result, it seems that the value of HbA1c weighs more in classifying a certain observation than the value of BMI.\n",
     "\n",
-    "A hemoglobin A1C (HbA1C)1 test is a blood test that shows what your average blood sugar (glucose) level was over the past two to three months. The values commonly used for diagnosis is that below 5.7% indicates normal, between 5.7% and 6.4% indicates pre-diabetic and 6.5% or higher indicates diabetic. Body Mass Index (BMI) is a person’s weight in kilograms divided by the square of height in meters. According to the CDC, a BMI between 18.5 and 24.9 indicates a healthy weight, while being under or over this range is underweight or overweight respectively. Part of our decision to use Hb1Ac and BMI as predictor variables are also because they are common measurements that are used in the diagnosis of diabetes as a high blood sugar level is an known indicator of diabetes and being overweight is a known contributing factor to diabetes.\n"
+    "A hemoglobin A1C (HbA1C)1 test is a blood test that shows what your average blood sugar (glucose) level was over the past two to three months. Body Mass Index (BMI) is a person’s weight in kilograms divided by the square of height in meters. Part of our decision to use Hb1Ac and BMI as predictor variables are also because they are common measurements that are used in the diagnosis of diabetes."
    ]
   },
   {
@@ -661,7 +661,7 @@
    "id": "4607a18f",
    "metadata": {},
    "source": [
-    "To make sure that our class proportions were roughly preserved when the data was split, we used the group_by, summarize, and n functions to find the number and percentage of observations in each CLASS like we did earlier. We can see that about 84.6% of the training data are diabetic observations, 5.3% are pre-diabetic observations, and 10.0% are non-diabetic observations which tells us the class proportions were successfully preserved."
+    "To make sure that our class proportions were roughly preserved when the data was split, we used the group_by, summarize, and n functions to find the number and percentage of observations in each CLASS like we did earlier. We can see the class proportions were successfully preserved."
    ]
   },
   {
@@ -1116,7 +1116,7 @@
    "id": "07f2e9ed",
    "metadata": {},
    "source": [
-    "To assess the accuracy of our classifier model, we use the metrics function to get the statistics about the quality of our model, specifying the truth argument as CLASS and the estimate argument as .pred_class. We filtered the dataframe to include only the accuracy row since the accuracy metric is the only one we are interested in. An accuracy of 95.2% is observed which means that our model is well designed and relatively accurate. This accuracy is only 0.3% lower than the accuracy estimate we obtained for K = 12 from our 10-fold cross-validation which is 95.5%."
+    "To assess the accuracy of our classifier model, we use the metrics function to get the statistics about the quality of our model, specifying the truth argument as CLASS and the estimate argument as .pred_class. An accuracy of 95.2% is observed which means that our model is well designed and relatively accurate. This accuracy is only 0.3% lower than the accuracy estimate we obtained for K = 12 from our 10-fold cross-validation which is 95.5%."
    ]
   },
   {
@@ -1191,7 +1191,7 @@
    "id": "3662a123",
    "metadata": {},
    "source": [
-    "We also generated a confusion matrix, a table of predicted labels and correct labels, of the predictions that our classifier made on the testing set using the conf_mat function. The confusion matrix shows 200 observations were correctly predicted as diabetic, 12 were correctly predicted as pre-diabetic, and 27 were correctly predicted as non-diabetic. Therefore the classifier labeled 200 + 12 + 27 = 239 observations correctly. It also shows that the classifier made some mistakes; in particular, it classified 9 observations as non-diabetic when they were truly diabetic, 1 observation as non-diabetic when it was truly pre-diabetic, 1 observation as pre-diabetic when it was truly diabetic, and 1 observation as diabetic when it was truly non-diabetic.\n"
+    "We also generated a confusion matrix, a table of predicted labels and correct labels, of the predictions that our classifier made on the testing set using the conf_mat function. The confusion matrix shows 200 observations were correctly predicted as diabetic, 12 were correctly predicted as pre-diabetic, and 27 were correctly predicted as non-diabetic. Therefore the classifier labeled 239 observations correctly and 12 incorrectly. "
    ]
   },
   {
