--- a/group project report_V1.ipynb
+++ b/group project report_V1.ipynb
@@ -11,25 +11,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8345e4b2-8ee1-411d-978b-264684e3772d",
-   "metadata": {},
-   "source": [
-    "### Can use previously diagnosed patients' medical attributes related to diabetes to predict whether a future patient with an unknown diagnosis falls into one of the three diabetes categories: 1. Diabetic, 2. Pre-diabetic, or 3. Non-diabetic?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "492a32f6-6853-4057-a843-f52bdb9c9355",
    "metadata": {},
    "source": [
     "### **Introduction:** ###\n",
     "\n",
-    "Diabetes is a common chronic health condition characterized by abnormally high blood glucose levels caused by decreased capacity of producing insulin or cells becoming resistant to insulin. Approximately, 1.4 million people around the world are diagnosed as diabetic each year. Type 1 diabetes is a genetic condition that often shows up early in life, however type 2 diabetes is different as it is mainly lifestyle-related and develops over time. Pre-diabetes is also prevalent as people are usually unaware of the condition since they produce no symptoms and will gradually lead to fully-fledged diabetes. As a result, it's critical to identify type 2 diabetes at an early stage in order to stop the condition from progressing and possibly getting worse. We intend to create a predictive model that can accurately predict whether a person is diabetic, pre-diabetic, or non-diabetic based on their medical information to help people assess their risk for developing type 2 diabetes.\n",
+    "Diabetes is a common chronic health condition characterized by abnormally high blood glucose levels caused by decreased capacity of producing insulin or cells becoming resistant to insulin. Approximately, 1.4 million people around the world are diagnosed as diabetic each year. Type 1 diabetes is a genetic condition that often shows up early in life, however type 2 diabetes is different as it is mainly lifestyle-related and develops over time. As a result, it's critical to identify type 2 diabetes at an early stage in order to stop the condition from progressing and possibly getting worse. We intend to create a predictive model that can accurately predict whether a person is diabetic, pre-diabetic, or non-diabetic based on their medical information.\n",
     "\n",
-    "We'll make use of a data set utilized in a previous study by Rajput et al., from the Iraqi society, as it was acquired from the laboratory of Medical City Hospital and the Specialized Center for Endocrinology and Diabetes-Al-Kindy Teaching Hospital. The data was extracted from patients' file and compiled into a database. The data consists of medical information and laboratory analysis of 1000 patients: 103 non-diabetic patients, 53 pre-diabetic patients, and 844 diabetic patients. The data contains different diabetes attributes such as Gender, Age, Urea level (Urea), Creatinine ratio (Cr), Blood Sugar Level (HbA1c), Cholesterol level (Chol), Triglycerides (TG), High-density lipoprotein (HDL), Low-density lipoprotein (LDL), Very-low-density lipoprotein (VLDL), and the patients' diagnosis (CLASS) of either diabetic, pre-diabetic, non-diabetic.\n",
+    "We'll make use of a data set utilized in a previous study by Rajput et al., from the Iraqi society, as it was acquired from the laboratory of Medical City Hospital. The data consists of medical information and laboratory analysis of 1000 patients: 103 non-diabetic patients, 53 pre-diabetic patients, and 844 diabetic patients. The data contains different diabetes attributes such as Gender, Age, Urea level (Urea), Creatinine ratio (Cr), Blood Sugar Level (HbA1c), Cholesterol level (Chol), Triglycerides (TG), High-density lipoprotein (HDL), Low-density lipoprotein (LDL), Very-low-density lipoprotein (VLDL), and the patients' diagnosis (CLASS).\n",
     "\n",
-    "The question we are trying to answer is whether we can use previously diagnosed patients' medical attributes related to diabetes to predict whether a future patient with an unknown diagnosis falls into one of the three diabetes categories: 1. Diabetic, 2. Pre-diabetic, or 3. Non-diabetic.\n",
-    "\n",
+    "The question we are trying to answer is whether we can use previously diagnosed patients' medical attributes related to diabetes to predict whether a future patient with an unknown diagnosis falls into one of the three diabetes categories.\n",
     " "
    ]
   },
@@ -233,7 +224,7 @@
    "id": "3c490217",
    "metadata": {},
    "source": [
-    "To get an idea of the distribution of classes in our dataset, we used the group_by, summarize, and n functions to find the number and percentage of observations in each CLASS. The group_by function groups the observations by their respective CLASS and the n function used within the summarize function counts the number of observations in each CLASS group. We then calculate the percentage of observations in each CLASS by dividing by the total number of observations. We have 844 (84.4%) diabetic, 53 (5.3%) pre-diabetic, and 103 (10.3%) non-diabetic observations."
+    "To get an idea of the distribution of classes in our dataset, we used the group_by, summarize, and n functions to find the number and percentage of observations in each CLASS. We then calculate the percentage of observations in each CLASS by dividing by the total number of observations. We have 844 (84.4%) diabetic, 53 (5.3%) pre-diabetic, and 103 (10.3%) non-diabetic observations."
    ]
   },
   {
@@ -319,7 +310,7 @@
    "id": "a61fedaf",
    "metadata": {},
    "source": [
-    "We decided to compute the mean values for each of the numerical predictors in our data set, excluding the Gender column since we cannot use a non-numerical variable as a predictor variable for classification. We used the summarize function paired with the across function to specify the columns that we want to perform the statistical summary on (AGE:BMI) and then used the mean function to calculate the mean values for each of the columns specified. "
+    "We decided to compute the mean values for each of the numerical predictors in our data set, excluding the Gender column since we cannot use a non-numerical variable as a predictor variable for classification. We used the mean function to calculate the mean values for each of the columns specified. "
    ]
   },
   {
@@ -396,7 +387,7 @@
    "id": "b03580ad",
    "metadata": {},
    "source": [
-    "We also computed the number of rows that have missing data within them to make sure that all of the observations that we use for our modelling is reliable and uniform. We confirmed that none of the observations in our dataset have any missing data."
+    "We confirmed that none of the observations in our dataset have any missing data."
    ]
   },
   {
@@ -441,7 +432,7 @@
    "id": "01ba6dd3",
    "metadata": {},
    "source": [
-    "Since our predictors have different scales, we scaled and centered all of the numerical predictors in our dataset. We used the recipe function to specify that the CLASS variable will be the target and all of the numerical variables are the predictors. We prepped the recipe with the step_scale and step_center functions, specifying to apply these functions to all predictors. We then baked the original, unscaled diabetes dataset with the recipe we created and stored the new, scaled dataframe as scaled_diabetes."
+    "We used the recipe function to specify that the CLASS variable will be the target and all of the numerical variables are the predictors. We prepped the recipe with the step_scale and step_center functions, specifying to apply these functions to all predictors. We then baked the original, unscaled diabetes dataset with the recipe we created and stored the new, scaled dataframe as scaled_diabetes."
    ]
   },
   {
@@ -598,7 +589,7 @@
    "id": "d2ffa4c4",
    "metadata": {},
    "source": [
-    "In order to evaluate our classifier's accuracy on unseen data, we need to split our dataset into training and testing sets using the initial_split function. To ensure that the split is done randomly but is also reproducible, we set a random seed value with the set.seed function. We specified prop to be 0.75 so that 75% of our original data ends up in the training set and 25% of our original data ends up in the testing set. We set the strata argument to the CLASS variable, to ensure that the training and testing subsets contain the right proportions of each category of observation. We then used the training and testing functions to extract the training and testing datasets into two separate dataframes."
+    "In order to evaluate our classifier's accuracy on unseen data, we need to split our dataset into training and testing sets using the initial_split function. To ensure that the split is done randomly but is also reproducible, we set a random seed value with the set.seed function. We specified prop to be 0.75 so that 75% of our original data ends up in the training set and 25% of our original data ends up in the testing set. We set the strata argument to the CLASS variable, to ensure that the training and testing subsets contain the right proportions of each category of observation. "
    ]
   },
   {
@@ -771,7 +762,7 @@
    "id": "a9b60a78",
    "metadata": {},
    "source": [
-    "To choose the best value of K for our classifier model, we use cross-validation to calculate an accuracy for each value of K in a reasonable range (1-20) and then pick the value of K that gives us the best accuracy. To do this, we created a model specification and specified that the neighbors argument is going to be tuned using tune(). We then created the k_vals dataframe with a neighbors variable containing values from 1 to 20 (stepping by 1) using the seq function. To perform a 10-fold cross-validation, we use the vfold_cv function with v = 10 to specify that we want to split the diabetes_train dataset into 10 folds. \n",
+    "To choose the best value of K for our classifier model, we use cross-validation to calculate an accuracy for each value of K in a reasonable range (1-20). To do this, we created a model specification and specified that the neighbors argument is going to be tuned using tune(). We then created the k_vals dataframe with a neighbors variable containing values from 1 to 20 (stepping by 1) using the seq function. To perform a 10-fold cross-validation, we use the vfold_cv function with v = 10 to specify that we want to split the diabetes_train dataset into 10 folds. \n",
     "\n",
     "Next, we created our data analysis workflow with the tune_grid function to fit the model for each value of K. We specified diabetes_recipe, which we created earlier, as our recipe and knn_tune as our model specification for the workflow. We pass the 10-fold cross-validation model we created before to the resamples argument and the k_vals dataframe to the grid argument of the tune_grid function. We then use the collect_metrics function to aggregate the mean and standard error of the classifier's validation accuracy across the folds."
    ]
@@ -1238,7 +1229,7 @@
    "id": "693141ff",
    "metadata": {},
    "source": [
-    "To visualize the distibution of the predicted model, a kernel graph was made versus the training dataset. The model shows that regions of the plot where the classifiers are confined."
+    "To visualize the distribution of the predicted model, a kernel graph was made versus the training dataset. The model shows that regions of the plot where the classifiers are confined."
    ]
   },
   {
